[project]
name = "voiceiq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "groq>=0.22.0",
    "pydantic>=2.11.3",
    "pydantic-ai>=0.2.0",
    "pydantic-settings>=2.8.1",
    "python-multipart>=0.0.20",
    "supabase>=2.15.0",
]
